--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,15 @@
 .git
 node_modules
+build/server.js
+build/server.js.map
+build/examples
+examples
 src
 tests
 .babelrc
 jest.config.js
 yarn-error.log
+app.log
 test.js
 tsconfig.json
 webpack.config.js
